# Unity2OpenSim

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  json2trc.py  main.cpp
assets/arm/ModelFiles/: MoBL_ARMS_module1_nomuscles.osim  MoBL_ARMS_module2_4_allmuscles.osim  MoBL_ARMS_module3_samemuscles.osim  MoBL_ARMS_module5_scaleIK.osim
assets/arm/ModelFiles/InputFiles_module1withoutmuscles/: AppState.xml  MoBL_ARMS_module1_Setup.xml
assets/arm/ModelFiles/InputFiles_module2_allpassivemuscles/: MoBL_ARMS_module2_Setup.xml
assets/arm/ModelFiles/InputFiles_module3_identicalpassivemuscles/: MoBL_ARMS_module3_Setup.xml
assets/arm/ModelFiles/InputFiles_module4_OSimEMGDrivenSimulation/: MoBL_ARMS_module4_Setup_elbow.xml  MoBL_ARMS_module4_Setup_shoulder.xml  MoBL_ARMS_module4_Setup_wrist.xml  controls_EMG_elbow.sto  controls_EMG_shoulder.sto  controls_EMG_wrist.sto
assets/arm/ModelFiles/InputFiles_module5_scaleIK/: MoBL_ARMS_module5_IK_Setup.xml  MoBL_ARMS_module5_Scale_Setup.xml  filter.m  reach.trc  static.trc
assets/arm/ModelFiles/InputFiles_module6_CMC/: AppState.xml  IKreachfiltered.mot
assets/arm/ModelFiles/InputFiles_module7_CMCDrivenFowardSimulation/: CMC_Reach8_states_abbrev.sto  MoBL_ARMS_module7_FDS_Setup.xml
assets/samples/: README.md
assets/samples/unity/: arm.json
unity_sample_scripts/: MarkerPositionAggregator.cs
util/filesystem/: trc.py
util/json/: __init__.py  reader.py
util/json2trc/: json2trc.py
util/json2trc/json_util/: __init__.py  reader.py
util/json2trc/trc_util/: __init__.py  writer.py
util/trc/: __init__.py  writer.py
(+2 files in other folders)
